--- a/VrijwilligersWerkApp/appsettings.json
+++ b/VrijwilligersWerkApp/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=root;database=seniorconnect;port=3306;password=Devesh97!"
+
+
+  }
 }
